--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
 <title>Quill Editors</title>
 <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script src="/app.js"></script>
+<script src="./app.js"></script>
 </head>
 <body>
 <div id="editor-container"></div>
