--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>Tytuł strony</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,11 +20,9 @@
 
 <div class="grid-container">
 
-        <h2 class="column-header">OKOLICZNOŚCI <br> OGÓLNE</h2>
-        <h2 class="column-header">NARZĘDZIA <br> MENTALNE </h2>
-        <h2 class="column-header">UWARUNKOWANIA <br> SZCZEGÓŁOWE</h2>
-
+<div class="container2"><h2 class="column-header">OKOLICZNOŚCI <br> OGÓLNE</h2></div>
 <div class="container">
+
 	<div class="frontone side">
 		<div class="content">
 			<h1>KTO?</h1>
@@ -29,32 +30,9 @@
 	</div>
 	<div class="back side">
 		<div class="content">
-			tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy
+			<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>
 	</div>
 </div></div>
-
-<div class="container">
-	<div class="fronttwo side">
-		<div class="content">
-			<h1>ZALETY WADY INTERESUJĄCE</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
-<div class="container">
-	<div class="frontthree side">
-		<div class="content">
-			<h1>LUDZIE</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
 <div class="container">
 	<div class="frontone side">
 		<div class="content">
@@ -63,31 +41,8 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
-
-<div class="container">
-	<div class="fronttwo side">
-		<div class="content">
-			<h1>ALTERNATYWY MOŻLIWOŚCI WYBORY</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
-<div class="container">
-	<div class="frontthree side">
-		<div class="content">
-			<h1>PRZESZKODY</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
 <div class="container">
 	<div class="frontone side">
 		<div class="content">
@@ -96,31 +51,8 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
-
-<div class="container">
-	<div class="fronttwo side">
-		<div class="content">
-			<h1>ROZWAŻ WSZYSTKIE CZYNNIKI</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
-<div class="container">
-	<div class="frontthree side">
-		<div class="content">
-			<h1>PROGNOZA</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
 <div class="container">
 	<div class="frontone side">
 		<div class="content">
@@ -129,31 +61,8 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
-
-<div class="container">
-	<div class="fronttwo side">
-		<div class="content">
-			<h1>INNE PUNKTY WIDZENIA</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
-<div class="container">
-	<div class="frontthree side">
-		<div class="content">
-			<h1>TEREN</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
 <div class="container">
 	<div class="frontone side">
 		<div class="content">
@@ -162,31 +71,8 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
-
-<div class="container">
-	<div class="fronttwo side">
-		<div class="content">
-			<h1>PODSTAWOWE PRIORYTETY</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
-<div class="container">
-	<div class="frontthree side">
-		<div class="content">
-			<h1>ZASOBY</h1>
-		</div>
-	</div>
-	<div class="back side">
-		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
-</div></div>
-
 <div class="container">
 	<div class="frontone side">
 		<div class="content">
@@ -195,9 +81,68 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
 
+
+
+
+
+
+
+
+
+<div class="container2"><h2 class="column-header">NARZĘDZIA <br> MENTALNE</h2></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>ZALETY WADY INTERESUJĄCE</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>ALTERNATYWY MOŻLIWOŚCI WYBORY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>ROZWAŻ WSZYSTKIE CZYNNIKI</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>INNE PUNKTY WIDZENIA</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>PODSTAWOWE PRIORYTETY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
 <div class="container">
 	<div class="fronttwo side">
 		<div class="content">
@@ -206,9 +151,70 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
 
+
+
+
+
+
+
+
+
+
+
+<div class="container2"><h2 class="column-header">UWARUNKOWANIA <br> SZCZEGÓŁOWE</h2></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>LUDZIE</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>PRZESZKODY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>PROGNOZA</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>TEREN</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>ZASOBY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
 <div class="container">
 	<div class="frontthree side">
 		<div class="content">
@@ -217,7 +223,7 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 	</div>
 	<div class="back side">
 		<div class="content">
-tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy tekst przykład tekstowy przykład tekst przykładowy	</div>
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
 </div></div>
 
 
@@ -229,6 +235,14 @@ tekst przykład tekstowy tekst tekst tekst tekst przykład tekst przykładowy te
 
 
 </body>
+<script>$('#exampleModal').on('show.bs.modal', function (event) {
+  var button = $(event.relatedTarget) // Button that triggered the modal
+  var recipient = button.data('whatever') // Extract info from data-* attributes
+  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+  var modal = $(this)
+  modal.find('.modal-title').text('New message to ' + recipient)
+  modal.find('.modal-body input').val(recipient)
+})</script>
 
 </html>
-
