--- a/index.html
+++ b/index.html
@@ -245,4 +245,17 @@
   modal.find('.modal-body input').val(recipient)
 })</script>
 
+	<script>
+// Pobierz wszystkie kontenery
+var containers = document.querySelectorAll('.container');
+
+// Dodaj zdarzenie kliknięcia do każdego kontenera
+for (var i = 0; i < containers.length; i++) {
+    containers[i].addEventListener('click', function() {
+        // Dodaj klasę 'flipped' do kontenera po kliknięciu
+        this.classList.toggle('flipped');
+    });
+}
+</script>
+
 </html>
