--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,262 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-<title>Quill Editors</title>
-<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script src="./app.js"></script>
+<title>Tytuł strony</title>
+<link rel="stylesheet" href="style.css" type="text/css" />
+<link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
+
 <body>
-<div id="editor-container"></div>
-<script>
-window.onload = createEditors;
-</script>
+<div class="main-container">
+<div class="logo-container">
+    <center><img src="logo.png"></img></center>
+</div>
+
+
+
+
+<div class="grid-container">
+
+<div class="container2"><h2 class="column-header">OKOLICZNOŚCI <br> OGÓLNE</h2></div>
+<div class="container">
+
+	<div class="frontone side">
+		<div class="content">
+			<h1>KTO?</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+			<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>
+	</div>
+</div></div>
+<div class="container">
+	<div class="frontone side">
+		<div class="content">
+			<h1>CO?</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontone side">
+		<div class="content">
+			<h1>KIEDY?</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontone side">
+		<div class="content">
+			<h1>GDZIE?</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontone side">
+		<div class="content">
+			<h1>JAK?</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontone side">
+		<div class="content">
+			<h1>DLACZEGO?</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+
+
+
+
+
+
+
+
+
+<div class="container2"><h2 class="column-header">NARZĘDZIA <br> MENTALNE</h2></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>ZALETY WADY INTERESUJĄCE</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>ALTERNATYWY MOŻLIWOŚCI WYBORY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>ROZWAŻ WSZYSTKIE CZYNNIKI</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>INNE PUNKTY WIDZENIA</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>PODSTAWOWE PRIORYTETY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="fronttwo side">
+		<div class="content">
+			<h1>SKUTKI I NASTĘPSTWA</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+
+
+
+
+
+
+
+
+
+
+
+<div class="container2"><h2 class="column-header">UWARUNKOWANIA <br> SZCZEGÓŁOWE</h2></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>LUDZIE</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>PRZESZKODY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>PROGNOZA</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>TEREN</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>ZASOBY</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+<div class="container">
+	<div class="frontthree side">
+		<div class="content">
+			<h1>RYZYKO</h1>
+		</div>
+	</div>
+	<div class="back side">
+		<div class="content">
+<i class="fas fa-info-circle" data-toggle="modal" data-target="#exampleModal"></i>	</div>
+</div></div>
+
+
+
+
+
+</div></div>
+
+
+
 </body>
+<script>$('#exampleModal').on('show.bs.modal', function (event) {
+  var button = $(event.relatedTarget) // Button that triggered the modal
+  var recipient = button.data('whatever') // Extract info from data-* attributes
+  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+  var modal = $(this)
+  modal.find('.modal-title').text('New message to ' + recipient)
+  modal.find('.modal-body input').val(recipient)
+})</script>
+
+	<script>
+// Pobierz wszystkie kontenery
+var containers = document.querySelectorAll('.container');
+
+// Dodaj zdarzenie kliknięcia do każdego kontenera
+for (var i = 0; i < containers.length; i++) {
+    containers[i].addEventListener('click', function() {
+        // Dodaj klasę 'flipped' do kontenera po kliknięciu
+        this.classList.toggle('flipped');
+    });
+}
+</script>
+
 </html>
