--- a/public/admin.html
+++ b/public/admin.html
@@ -7,6 +7,62 @@
 </head>
 <body>
     <!-- Tutaj umieść kod HTML strony administracyjnej -->
+
+    <!-- 18 edytorów Quill i przycisków zapisywania -->
+    <div id="modal1" class="quill-editor"></div>
+    <button id="save-button1">Zapisz zmiany</button>
+
+    <div id="modal2" class="quill-editor"></div>
+    <button id="save-button2">Zapisz zmiany</button>
+
+    <div id="modal3" class="quill-editor"></div>
+    <button id="save-button3">Zapisz zmiany</button>
+
+    <div id="modal4" class="quill-editor"></div>
+    <button id="save-button4">Zapisz zmiany</button>
+
+    <div id="modal5" class="quill-editor"></div>
+    <button id="save-button5">Zapisz zmiany</button>
+
+    <div id="modal6" class="quill-editor"></div>
+    <button id="save-button6">Zapisz zmiany</button>
+
+    <div id="modal7" class="quill-editor"></div>
+    <button id="save-button7">Zapisz zmiany</button>
+
+    <div id="modal8" class="quill-editor"></div>
+    <button id="save-button8">Zapisz zmiany</button>
+
+    <div id="modal9" class="quill-editor"></div>
+    <button id="save-button9">Zapisz zmiany</button>
+
+    <div id="modal10" class="quill-editor"></div>
+    <button id="save-button10">Zapisz zmiany</button>
+
+    <div id="modal11" class="quill-editor"></div>
+    <button id="save-button11">Zapisz zmiany</button>
+
+    <div id="modal12" class="quill-editor"></div>
+    <button id="save-button12">Zapisz zmiany</button>
+
+    <div id="modal13" class="quill-editor"></div>
+    <button id="save-button13">Zapisz zmiany</button>
+
+    <div id="modal14" class="quill-editor"></div>
+    <button id="save-button14">Zapisz zmiany</button>
+
+    <div id="modal15" class="quill-editor"></div>
+    <button id="save-button15">Zapisz zmiany</button>
+
+    <div id="modal16" class="quill-editor"></div>
+    <button id="save-button16">Zapisz zmiany</button>
+
+    <div id="modal17" class="quill-editor"></div>
+    <button id="save-button17">Zapisz zmiany</button>
+
+    <div id="modal18" class="quill-editor"></div>
+    <button id="save-button18">Zapisz zmiany</button>
+
     <script src="admin.js"></script>
 </body>
 </html>
