--- a/public/admin.html
+++ b/public/admin.html
@@ -4,6 +4,8 @@
     <title>Panel administracyjny</title>
     <link rel="stylesheet" href="admin.css" type="text/css" />
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- Tutaj umieść kod HTML strony administracyjnej -->
